# FAT16Reader

./: CMakeLists.txt  README.md  fat16_reader.h  file_reader.c  file_reader.h  main.c
include/: cluster_tools.h  directory_tools.h  disc_tools.h  file_tools.h  table_tools.h
src/: cluster_tools.c  directory_tools.c  disc_tools.c  file_tools.c  internal.h  table_tools.c
tests/: main.c
